correcting contrast, adding meta description

--- a/assets/style.css
+++ b/assets/style.css
@@ -101,7 +101,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #5D5A27;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
